--- a/BCryptHashGenerator/Views/Home/Index.cshtml
+++ b/BCryptHashGenerator/Views/Home/Index.cshtml
@@ -17,7 +17,9 @@
             </li>
             <li>
                 @Html.LabelFor(m => m.BCryptHash)
-                @Html.TextBoxFor(m => m.BCryptHash)
+                <blockquote>
+                    @Model.BCryptHash
+                </blockquote>
             </li>
         </ol>
         <input type="submit" value="Generate Hash" />
