--- a/BCryptHashGenerator/Views/Shared/_Layout.cshtml
+++ b/BCryptHashGenerator/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>@ViewBag.Title - My ASP.NET MVC Application</title>
+        <title>@ViewBag.Title - BCrypt Hash Generator</title>
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
         <meta name="viewport" content="width=device-width" />
         @Styles.Render("~/Content/css")
@@ -12,11 +12,13 @@
         <header>
             <div class="content-wrapper">
                 <div class="float-left">
-                    <p class="site-title">@Html.ActionLink("your logo here", "Index", "Home")</p>
+                    <p class="site-title">@Html.ActionLink("BCrypt Hash Generator", "Index", "Home")</p>
                 </div>
                 <div class="float-right">
                     <section id="login">
-                        @Html.Partial("_LoginPartial")
+                        <ul>
+                            <li>Created by <a href="http://theoldsewingfactory.com">The Old Sewing Factory</a></li>
+                        </ul>
                     </section>
                     <nav>
                         <ul id="menu">
