--- a/BCryptHashGenerator/Views/Shared/_Layout.cshtml
+++ b/BCryptHashGenerator/Views/Shared/_Layout.cshtml
@@ -27,6 +27,15 @@
         <div id="body">
             @RenderSection("featured", required: false)
             <section class="content-wrapper main-content clear-fix">
+                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <!-- Simple Advert -->
+                <ins class="adsbygoogle"
+                     style="display:inline-block;width:728px;height:90px"
+                     data-ad-client="ca-pub-8209112826554315"
+                     data-ad-slot="5904568587"></ins>
+                <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
                 @RenderBody()
             </section>
         </div>
