--- a/BCryptHashGenerator/Views/Shared/_Layout.cshtml
+++ b/BCryptHashGenerator/Views/Shared/_Layout.cshtml
@@ -27,9 +27,26 @@
         <div id="body">
             @RenderSection("featured", required: false)
             <section class="content-wrapper main-content clear-fix">
-                <div data-type="ad" data-publisher="bcrypthashgenerator.apphb.com" data-format="728x90" data-zone="header" data-tags="bcrypt%2chash%2csecurity"></div>
+                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Responsive -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8209112826554315"
+     data-ad-slot="3898665385"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
                 @RenderBody()
-                <div data-type="ad" data-publisher="bcrypthashgenerator.apphb.com" data-format="728x90" data-zone="footer" data-tags="bcrypt%2chash%2csecurity"></div>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8209112826554315"
+     data-ad-slot="2142730585"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
             </section>
         </div>
         <footer>
@@ -43,16 +60,13 @@
         @Scripts.Render("~/bundles/jquery")
         @RenderSection("scripts", required: false)
         <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.9/cookieconsent.min.js"></script>
-        <script type='text/javascript'>
-            function _dmBootstrap(file) {
-                var _dma = document.createElement('script');
-                _dma.type = 'text/javascript';
-                _dma.async = true;
-                _dma.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + file;
-                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(_dma);
-            }
-            function _dmFollowup(file) { if (typeof DMAds === 'undefined') _dmBootstrap('cdn2.DeveloperMedia.com/a.min.js'); }
-            (function () { _dmBootstrap('cdn1.DeveloperMedia.com/a.min.js'); setTimeout(_dmFollowup, 2000); })();
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+            ga('create', 'UA-1566412-12', 'auto');
+            ga('send', 'pageview');
         </script>
     </body>
 </html>
